tests/syntax/good/testfile-coercion-1.rs


fn main() {
    let x = 1usize as i32;

    let y = x as usize;

    let z = 1 as i32;
}