tests/syntax/bad/testfile-coercion-2.rs


fn main() {
    let x = 1as usize;
}